2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/getopt1.c: Add inclusion of config.h
	to have openvas-libnasl compile again.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/popen.h: Fixed proto.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/kb.h, libopenvas/store.h,
	libopenvas/services1.h, libopenvas/system.h,
	libopenvas/plugutils.h, libopenvas/arglists.h,
	libopenvas/network.h, libopenvas/bpf_share.h,
	libopenvas/share_fd.h, libopenvas/pcap_openvas.h,
	libopenvas/popen.h, libopenvas/www_funcs.h:
	Changed Author and Copyright to the contents of
	include/libopenvas.h which is the origin of most
	of the contents of the new header files.

2008-03-26  Tim Brown <timb@nth-dimension.org.uk>

	* configure.in: Fix up resolv checks as dn_expand is only
	a weak alias to __dn_expand. resolv.h #define's it but
	autoconf never #includes that when making the check.

	* configure: Updated.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* include/libopenvas.h: Fix up some includes.

	* Makefile: Don't install includes.h, no one external
	should be in need of this.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/getopt.c: Replaced inclusion of includes.h
	by config.h which appears sufficient.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* include/getopt.h: Moved to libopenvas/

	* libopenvas/getopt.h: New. Previous include/getopt.h.

	* libopenvas/getopt1.c: Removed includes.h and adapted
	according to move of getopt.h

	* MANIFEST: Updated.

	* Makefile: Reflected location change of getopt.h.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/ids_send.c: Removed inclusion of includes.h
	and added FIX() definition from there.

2008-03-26  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* libopenvas/hlst.c: replace inlusion of "includes.h" by
	respective single includes.
